# helios-slam-code-pack

./: README.md  docs-代码改动说明.md  sros_sdk_py-patch-note.md
helios-navigation-main/: .gitignore  README.md
helios-navigation-main/docs/: 仿真手册.md  典型问题.md  厂家事实表.md  建图与导航.md  技术说明.md  数据交接清单.md  方案设计.md  真机手册.md
helios-navigation-main/lios/helios_linorobot_ws/scripts/: run_sim_nav.bash
helios-navigation-main/lios/helios_linorobot_ws/src/helios_bringup/: .gitignore  README.md  package.xml  setup.py
helios-navigation-main/lios/helios_linorobot_ws/src/helios_bringup/config/: ekf.yaml  nav2_params.yaml  slam_toolbox.yaml
helios-navigation-main/lios/helios_linorobot_ws/src/helios_bringup/helios_bringup/: cmd_vel_relay.py  laser_preprocess.py  odom_publisher.py
helios-navigation-main/lios/helios_linorobot_ws/src/helios_bringup/launch/: bringup.launch.py  localization.launch.py  mapping.launch.py  navigation.launch.py  static_tf.launch.py
helios-navigation-main/lios/helios_linorobot_ws/src/helios_description/: CMakeLists.txt
helios-navigation-main/lios/helios_linorobot_ws/src/helios_description/meshes/: base_link.STL
helios-navigation-main/lios/helios_linorobot_ws/src/helios_description/rviz/: display.rviz
helios-navigation-main/lios/helios_linorobot_ws/src/helios_description/urdf/: helios.urdf.xacro
helios-navigation-main/lios/helios_linorobot_ws/src/helios_gazebo/: CMakeLists.txt  README.md  package.xml
helios-navigation-main/lios/helios_linorobot_ws/src/helios_gazebo/launch/: sim.launch.py  sim_nav.launch.py  sim_playground_nav.launch.py  sim_slam.launch.py
helios-navigation-main/lios/helios_linorobot_ws/src/helios_gazebo/rviz/: sim.rviz
sr_amr_control/: README-zh.md  README.md  package.xml  setup.cfg  setup.py
sr_amr_control/launch/: amr_control.launch.py
sr_amr_control/sr_amr_control/: charge_action.py  estop_srv.py  lidar_reporter.py  localization_action.py  main.py  move_follow_path_action.py  move_pause_srv.py  move_to_station_action.py  remote_control.py  state_publisher.py
sr_amr_control/sr_amr_control/utils/: internal_state.py  movement_commands.py  ros_bridge.py
sr_amr_control/test/: test_control_parameters.py  test_launch_parameters.py  test_lidar_reporter.py  test_remote_control.py  test_to_ros_pose.py
